fix urls and fix li gap

--- a/static/home/css/form1.css
+++ b/static/home/css/form1.css
@@ -77,7 +77,7 @@ p{
      margin-bottom: 5%;
 }
 li {
-    margin: 4%;
+    margin: 6%;
 }
 #detail {
     margin-left: 3%;
